@@ -179,9 +179,7 @@ class EditPlace(EditPrimary):
         self.backref_list = self._add_tab(
             notebook,
             PlaceBackRefList(self.dbstate,self.uistate,self.track,
-                             self.db.find_backlink_handles(self.obj.handle),
-                             self.enable_warnbox
-                             ))
+                             self.db.find_backlink_handles(self.obj.handle)))
 
     def _cleanup_on_exit(self):
         self.backref_list.close()
