@@ -1,3 +1,8 @@
+2006-04-21  Don Allingham  <don@gramps-project.org>
+	* src/Editors/_EditRepository.py: fix warnbox call
+	* src/Editors/_EditPlace.py: fix warnbox call
+	* src/Editors/_EditRepoRef.py: Add backreference tab
+
 2006-04-21  Alex Roitman  <shura@gramps-project.org>
 	* src/PluginUtils/_PluginStatus.py: Many small fixes.
 	* src/ManagedWindow.py (GrampsWindowManager.display_menu_list):
